@@ -45,8 +45,11 @@ Added the emulation of physical bulbs & LEDs connected to binary outputs, for WP
 
 In addition to the TILDE key, now also the YEN key on respective keyboard mappings will work to bring up the internal PinMAME menu
 
+Support WPC UARTs (8251 from Printer Option Kit & 16C450 from WPC95), also making the 'Championship Link' mode of NBAFB work (incl. PinMAME <-> real machine)
+
 *** CORE/CPU ***
 Fixed WPC General Illumination (GI) Dimming (most noticably if more than one GI line is involved, also all 8 levels are now handled properly)
+Fixed SAM FG/Shrek and WOF modulated LEDs behavior (now work the same as the rest)
 Reworked Capcom emulation & timings, allowing all tables to behave 'normally' (no more delay on Flipper Football, DMD's animation at the right speed,...)
 Added Cosmic Flash sound emulation (Bell stole it from Bally's Squalk&Talk, but removed speech and DAC chips)
 Improved Zaccaria 11178 sound emulation a little (clown, poolcham, bbeltzac, mexico, zankor, spooky)
